# aoc

./: Cargo.toml  flake.nix  out.txt  shell.nix
aoc-2024/: Cargo.toml
aoc-2024/src/: lib.rs
aoc-2024/src/day1/: a.rs  b.rs  mod.rs
aoc-2024/src/day10/: a.rs  b.rs
aoc-2024/src/day11/: b.rs  mod.rs
aoc-2024/src/day12/: mod.rs
aoc-2024/src/day2/: b.rs  mod.rs
aoc-2024/src/day3/: a.rs  mod.rs
aoc-2024/src/day4/: b.rs
aoc-2024/src/day6/: b.rs  mod.rs
aoc-2024/src/day7/: b.rs  mod.rs
aoc-2024/src/day8/: mod.rs
aoc-2024/src/day9/: a.rs  b.rs  mod.rs
aoc-2025/: Cargo.toml
aoc-2025/src/: lib.rs
aoc-2025/src/day1/: a.rs  b.rs  mod.rs
aoc-2025/src/day2/: a.rs  b.rs  mod.rs
aoc-2025/src/day3/: a.rs  b.rs  mod.rs
aoc-2025/src/day4/: a.rs  b.rs  mod.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: main.rs
aoc-common/: Cargo.toml
aoc-common/src/: lib.rs  tools.rs
src/: lib.rs  main.rs  tools.rs
src/day1/: b.rs  mod.rs
src/day10/: mod.rs
src/day11/: a.rs
src/day12/: a.rs  b.rs
src/day2/: a.rs  b.rs  mod.rs
src/day3/: a.rs  b.rs  mod.rs
src/day4/: a.rs  b.rs  mod.rs
src/day5/: a.rs  b.rs  mod.rs
src/day6/: a.rs  b.rs  mod.rs
src/day7/: a.rs  b.rs  mod.rs
src/day8/: a.rs  b.rs  mod.rs
src/day9/: a.rs  mod.rs
