[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_2024"
path = "src/lib.rs"

[dependencies]
aoc-common = { path = "../aoc-common" }
anyhow = "1.0.94"
colored = "2.1.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
